--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,19 @@
   			<ul class="cd-main-nav">
   				<li><a href="#">About</a></li>
   				<li><a href="#">Companies</a></li>
-  				<li><a href="#">Projects</a></li>
+  				<li class="nav-item  dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Project List#1</a>
+              <a class="dropdown-item" href="#">Project List#2</a>
+              <a class="dropdown-item" href="#">Project List#3</a>
+              <a class="dropdown-item" href="#">Project List#4</a>
+              <a class="dropdown-item" href="#">Project List#5</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Project List#4</a>
+              <a class="dropdown-item" href="#">Project List#5</a>
+            </div>
+          </li>
   				<li><a href="#">Sign in</a></li>
   			</ul> <!-- .cd-main-nav -->
   		</nav> <!-- .cd-main-nav-wrapper -->
@@ -85,14 +97,14 @@
             <div class="col-md-4">
               <div class="sidebar sidebar-01">
                 <h2>Find Suppliers</h2>
-                <p class="mt-5 mb-5 w-75"> Browse thousands of reliable suppliers in different industries. Contact suppliers through SMBeez or directly. Check out the suppliers’ reviews by other clients like you and engage confidently in business relationships based on mutual trust.</p>
+                <p class="mt-5 mb-5"> Browse thousands of reliable suppliers in different industries. Contact suppliers through SMBeez or directly. Check out the suppliers’ reviews by other clients like you and engage confidently in business relationships based on mutual trust.</p>
                 <a href="" class="btn btn-blue btn-yellow">Browse Companies</a>
               </div>
             </div>
             <div class="col-md-8">
               <div class="row">
                 <div class="col-md-12">
-                  <h3>Featured companies <a href="" class="btn btn-trans pull-right">Discover more</a></h3>
+                  <h3 class="mb-5">Featured companies <a href="" class="btn btn-trans pull-right">Discover more</a></h3>
                 </div>
                 <div class="col-md-6">
                   <div class="company-box box-block mb-5">
@@ -154,47 +166,76 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-8">
-              <div class="row">
+              <div class="row equal">
                 <div class="col-md-12">
-                  <h3>Featured Projects <a href="" class="btn btn-trans pull-right">Discover more</a></h3>
+                  <h3 class="mb-5">Featured Projects <a href="" class="btn btn-trans pull-right">Discover more</a></h3>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mb-4">
                   <div class="project-box box-block">
                     <p class="thumb-title mt-1 mb-1">Enlightenment Is Not Just</p>
                     <p>Over time, even the most sophisticated, memory packed computer can begin to run slow if we don’t do something to prevent it.</p>
                     <p class="tags">More in: <a href="">Construction and Real Estate</a></p>
                   </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mb-4">
                   <div class="project-box box-block">
                     <p class="thumb-title mt-1 mb-1">Low Cost Advertising</p>
                     <p>There are many ways chocolate makes people happy and one of the worthiest is a tour that has been described a</p>
                     <p class="tags">More in: <a href="">Trade, Wholesale and Retail</a></p>
                   </div>
                 </div>
-                <div class="col-md-6">
-                  <div class="project-box box-block border-0">
-                    <p class="thumb-title mt-1 mb-1">Direct Mail Advertising</p>
+                <div class="col-md-6 mb-4">
+                  <div class="project-box box-block">
+                    <p class="thumb-title mt-1 mb-1">Promotional Advertising</p>
                     <p>According to the research firm Frost & Sullivan, the estimated size of the North American used test and measurement...</p>
                     <p class="tags">More in: <a href="">Finance and Insurance</a></p>
                   </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mb-4">
                   <div class="project-box box-block border-0">
                     <p class="thumb-title mt-1 mb-1">Promotional Advertising</p>
                     <p>Audio player software is used to play back sound recordings in one of the many formats available for computers today...</p>
                     <p class="tags">More in: <a href="">Oil, Gas and Mining</a></p>
                   </div>
                 </div>
-
               </div>
             </div>
             <div class="col-md-4">
-              <div class="sidebar sidebar-02 mx-auto">
-                <h2>Find Work</h2>
-                <p class="mt-5 mb-5"> Browse thousands of reliable suppliers in different industries. Contact suppliers through SMBeez or directly. Check out the suppliers’ reviews by other clients like you and engage confidently in business relationships based on mutual trust.</p>
-                <a href="" class="btn btn-blue btn-yellow">Browse Projects</a>
-              </div>
+
+              <div class="row equal">
+                <div class="col-md-12">
+                  <h3 class="mb-5">Featured Projects</h3>
+                </div>
+                <div class="col-md-12 mb-4">
+                  <div class="project-box project-box-side box-block ">
+                    <p class="thumb-title mt-1 mb-1">Direct Mail Advertising</p>
+                    <p>Over time, even the most sophisticated, memory packed computer can begin to run slow if we don’t do something to prevent it.</p>
+                    <p class="tags">More in: <a href="">Finance and Insurance</a></p>
+                  </div>
+                </div>
+                <div class="col-md-12 mb-4">
+                  <div class="project-box project-box-side box-block border-0">
+                    <p class="thumb-title mt-1 mb-1">Promotional Advertising</p>
+                    <p>Audio player software is used to play back sound recordings in one of the many formats available for computers today...</p>
+                    <p class="tags">More in: <a href="">Oil, Gas and Mining</a></p>
+                  </div>
+                </div>
+</div>
+
+
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+      <section class="create-intro-sidebar mb-5">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-6 col-xs-12 offset-md-3 text-center">
+              <h2>Find Work</h2>
+              <p class="mt-5 mb-5"> Browse thousands of reliable suppliers in different industries. Contact suppliers through SMBeez or directly. Check out the suppliers’ reviews by other clients like you and engage confidently in business relationships based on mutual trust.</p>
+              <a href="" class="btn btn-blue btn-yellow">Browse Projects</a>
             </div>
           </div>
         </div>
